--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -19,7 +19,7 @@
                         <a href="/meet-aj-hackett.html" class="footer-link">Meet AJ Hackett</a>
                         <a href="timeline.html" class="footer-link">Timeline</a>
                     </div>
-                    <a href="#" class="footer-link">Our Brands</a>
+                    <a href="/skypark-aj-hackett.html" class="footer-link">Our Brands</a>
                     <div class="submenu">
                         <a href="/skypark-aj-hackett.html" class="footer-link">Skypark by AJ Hackett</a>
                         <a href="/pondok-santi-estate.html" class="footer-link">Pondok Santi Estate</a>
