--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -22,7 +22,7 @@
         <nav class="hidden lg:flex items-center space-x-3">
             <a href="/meet-aj-hackett.html" class="nav-item">Meet AJ Hackett</a>
             <div class="relative group">
-                <a href="#" class="nav-item">Our Brands</a>
+                <a href="/skypark-aj-hackett.html" class="nav-item">Our Brands</a>
                 <div class="absolute left-0 hidden group-hover:block bg-white shadow-md mt-2">
                     <a href="/skypark-aj-hackett.html" class="block px-4 py-2 hover:bg-gray-100">Skypark by AJ Hackett</a>
                     <a href="/pondok-santi-estate.html" class="block px-4 py-2 hover:bg-gray-100">Pondok Santi Estate</a>
@@ -41,7 +41,7 @@
             <div class="relative group">
                 <a href="/meet-the-team.html" class="nav-item">Meet Our Team</a>
                 <div class="absolute left-0 hidden group-hover:block bg-white shadow-md mt-2">
-                    <a href="/purpose-promise-values.html#purpose" class="block px-4 py-2 hover:bg-gray-100">Our Purpose, Promise, and Values</a>
+                    <a href="/purpose-promise-values.html" class="block px-4 py-2 hover:bg-gray-100">Our Purpose, Promise, and Values</a>
                 </div>
             </div>
             <a href="/safety-management.html" class="nav-item">Safety Management</a>
@@ -63,7 +63,7 @@
             <div class="submenu">
                 <a href="/timeline.html" class="pl-5p">Timeline</a>
             </div>
-            <a href="#" class="pt-5p">Our Brands</a>
+            <a href="/skypark-aj-hackett.html" class="pt-5p">Our Brands</a>
             <div class="submenu">
                 <a href="/skypark-aj-hackett.html" class="pl-5p pb-2p -mr-15p">Skypark by AJ Hackett</a>
                 <a href="/pondok-santi-estate.html" class="pl-5p -mr-10p">Pondok Santi Estate</a>
@@ -78,7 +78,7 @@
             </div>
             <a href="/meet-the-team.html" class="pt-5p">Meet Our Team</a>
             <div class="submenu">
-                <a href="/purpose-promise-values.html#purpose" class="pl-5p pb-2p">Our Purpose, Promise, and Values</a>
+                <a href="/purpose-promise-values.html" class="pl-5p pb-2p">Our Purpose, Promise, and Values</a>
             </div>
             <a href="/safety-management.html" class="pt-5p">Safety Management</a>
             <a href="/contact.html" class="pt-5p">Contact Us</a>
