--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -654,11 +654,6 @@ a {
 .gap-y-5 {
   row-gap: 1.25rem;
 }
-.space-x-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -920,6 +915,7 @@ header {
   z-index: 50;
 }
 
+
 .mobile-menu {
     position: fixed;
     top: 0;
@@ -942,6 +938,8 @@ header {
   cursor: pointer;
 }
 
+
+
 /* Dropdown Styles */
 .group:hover .group-hover\:block {
   display: block;
@@ -955,6 +953,21 @@ header {
   background-color: #f3f3f3;
   border-radius: 4px;
 }
+
+
+.normal-nav {
+  display: none;
+}
+
+@media (min-width:840px) {
+  .mobile-menu {
+    display: none;
+}
+  .normal-nav {
+    display: flex; 
+  }
+}
+
 
 .header-bg {
   background-color: #FFFDFF; 
@@ -1090,8 +1103,11 @@ header {
   width: 100%;
   height: 4px;
   margin: 4px 0;
-  background: #033357;
+  background-color: #033357;
   transition: transform 0.3s ease-in-out;
+  z-index: 10; /* Make sure it's above other content */
+  transform: none; /* Ensure no transformation is hiding it */
+  visibility: visible;
 }
 
 .mobile-menu {
@@ -1104,11 +1120,11 @@ header {
   top: 0;
   right: -500px; /* Initially hidden off-screen */
   width: 300px; /* Width of the menu */
-  height: 841px;
+  height: 100vh;
   text-align: left;
   overflow-y: auto;
   z-index: 50;
-  transition: right 0.7s ease; /* Slide effect */
+  transition: right 0.7s ease-in-out; /* Slide effect */
   border-left: 4px solid #D2AE39; /* Yellow left border */
 }
 
@@ -1729,17 +1745,16 @@ footer {
     margin-top: 5%;
     margin-bottom: 5%;
   }
-  .lg\:flex {
-    display: flex;
-  }
-  .lg\:hidden {
-    display: none;
-  }
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .lg\:grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+  .lg\:space-x-3 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
   }
   .lg\:pb-10p {
     padding-bottom: 10%;
