--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ header {
   z-index: 50;
 }
 
+
 .mobile-menu {
     position: fixed;
     top: 0;
@@ -68,6 +69,8 @@ header {
   cursor: pointer;
 }
 
+
+
 /* Dropdown Styles */
 .group:hover .group-hover\:block {
   display: block;
@@ -85,6 +88,21 @@ header {
   background-color: #f3f3f3;
   border-radius: 4px;
 }
+
+
+.normal-nav {
+  display: none;
+}
+
+@media (min-width:840px) {
+  .mobile-menu {
+    display: none;
+}
+  .normal-nav {
+    display: flex; 
+  }
+}
+
 
 .header-bg {
   background-color: #FFFDFF; 
@@ -220,8 +238,11 @@ header {
   width: 100%;
   height: 4px;
   margin: 4px 0;
-  background: #033357;
+  background-color: #033357 !important;
   transition: transform 0.3s ease-in-out;
+  z-index: 10; /* Make sure it's above other content */
+  transform: none; /* Ensure no transformation is hiding it */
+  visibility: visible !important;
 }
 
 .mobile-menu {
@@ -234,11 +255,11 @@ header {
   top: 0;
   right: -500px; /* Initially hidden off-screen */
   width: 300px; /* Width of the menu */
-  height: 841px;
+  height: 100vh;
   text-align: left;
   overflow-y: auto;
   z-index: 50;
-  transition: right 0.7s ease; /* Slide effect */
+  transition: right 0.7s ease-in-out; /* Slide effect */
   border-left: 4px solid #D2AE39; /* Yellow left border */
 }
 
