--- a/style.css
+++ b/style.css
@@ -46,22 +46,6 @@ header {
   z-index: 50;
 }
 
-
-.mobile-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 50;
-    background:  #FFFDFF; 
-    display: none;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-
 .nav-item {
   padding: 5px 10px;
   margin: 0;
@@ -94,14 +78,7 @@ header {
   display: none;
 }
 
-@media (min-width:840px) {
-  .mobile-menu {
-    display: none;
-}
-  .normal-nav {
-    display: flex; 
-  }
-}
+
 
 
 .header-bg {
@@ -246,12 +223,11 @@ header {
 }
 
 .mobile-menu {
-  display: fixed;
+  position: fixed;
   background-color: #033357; /* Dark blue background */
   color: #FFFDFF; /* Light text color */
   padding-left: 2rem;
   padding-top: 2rem;
-  position: fixed;
   top: 0;
   right: -500px; /* Initially hidden off-screen */
   width: 300px; /* Width of the menu */
@@ -264,7 +240,7 @@ header {
 }
 
 .mobile-menu.active {
-  right: 38px; 
+  right: 0; 
 }
 
 .mobile-menu-content {
@@ -282,12 +258,6 @@ header {
   font-size: 1.3rem;
 }
 
-.submenu {
-  margin-top: 0.5rem;
-  /* padding-left: 1.5rem;  Indent submenus */
-  border-left: 2px solid #D2AE39; 
-  margin-left: 5%;
-}
 
 .footer-contact {
   display: inline-block;
@@ -598,6 +568,17 @@ footer {
 
 
 
+}
+
+
+
+@media (min-width:840px) {
+  .mobile-menu {
+    display: none;
+}
+  .normal-nav {
+    display: flex; 
+  }
 }
 
 @media (min-width:850px) {
