--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -39,9 +39,7 @@
                     <a href="/meet-the-team.html" class="footer-link">Get to Know Us</a>
                     <div class="submenu">
                         <a href="/meet-the-team.html" class="footer-link">Meet Our Team</a>
-                        <a href="/purpose-promise-values.html#purpose" class="footer-link">Our Purpose</a>
-                        <a href="/purpose-promise-values.html#promise" class="footer-link">Our Promise</a>
-                        <a href="/purpose-promise-values.html#values" class="footer-link">Our Values</a>
+                        <a href="/purpose-promise-values.html" class="footer-link">Our Purpose, Promise, and Values</a>
                     </div>
                     <a href="/safety-management.html" class="footer-link">Safety Management</a>
                 </nav>
