--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -27,7 +27,7 @@
             <span class="ml-1">&#x25BC;</span> <!-- Downward Arrow -->
         </a>
         <!-- Dropdown Menu -->
-        <div class="absolute left-0 hidden group-hover:flex flex-col bg-white shadow-md mt-2 rounded-md">
+        <div class="absolute left-0 hidden group-hover:flex flex-col bg-[#FFFDFF] shadow-md pt-2 rounded-md">
             <a href="/meet-aj-hackett.html" class="block px-4 py-2 hover:bg-gray-200">Meet AJ Hackett</a>
             <a href="/timeline.html" class="block px-4 py-2 hover:bg-gray-200">Timeline</a>
             <a href="/purpose-promise-values.html" class="block px-4 py-2 hover:bg-gray-200">Our Purpose, Promise, and Values</a>
@@ -38,7 +38,7 @@
             Our Brands 
             <span class="ml-1">&#x25BC;</span> <!-- Downward Arrow -->
         </a>
-        <div class="absolute left-0 hidden group-hover:flex flex-col bg-white shadow-md mt-2 rounded-md">
+        <div class="absolute left-0 hidden group-hover:flex flex-col bg-[#FFFDFF] shadow-md pt-2 rounded-md">
             <a href="/skypark-aj-hackett.html" class="block px-4 py-2 hover:bg-gray-200">Skypark by AJ Hackett</a>
             <a href="/pondok-santi-estate.html" class="block px-4 py-2 hover:bg-gray-200">Pondok Santi Estate</a>
             <a href="/experiences-aj-hackett.html" class="block px-4 py-2 hover:bg-gray-200">Our Experiences</a>
@@ -50,7 +50,7 @@
             Sustainability 
             <span class="ml-1">&#x25BC;</span> <!-- Downward Arrow -->
         </a>
-        <div class="absolute left-0 hidden group-hover:flex flex-col bg-white shadow-md mt-2 rounded-md">
+        <div class="absolute left-0 hidden group-hover:flex flex-col bg-[#FFFDFF] shadow-md pt-2 rounded-md">
             <a href="/accessibility.html" class="block px-4 py-2 hover:bg-gray-200">Accessibility</a>
             <a href="/reconciliation.html" class="block px-4 py-2 hover:bg-gray-200">Reconciliation</a>
             <a href="/community.html" class="block px-4 py-2 hover:bg-gray-200">Community</a>
