--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -699,6 +699,10 @@ a {
 .bg-\[\#03335799\] {
   background-color: #03335799;
 }
+.bg-\[\#FFFDFF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 253 255 / var(--tw-bg-opacity));
+}
 .bg-cover {
   background-size: cover;
 }
@@ -803,11 +807,17 @@ a {
 .pt-15p {
   padding-top: 15%;
 }
+.pt-2p {
+  padding-top: 2%;
+}
 .pt-5 {
   padding-top: 1.25rem;
 }
 .pt-5p {
   padding-top: 5%;
+}
+.pt-2 {
+  padding-top: 0.5rem;
 }
 .text-center {
   text-align: center;
@@ -942,7 +952,7 @@ header {
   top: 100%; /* Position the dropdown directly below the nav item */
   left: 0;
   min-width: 200px;
-  background-color: white; /* Ensure dropdown has a solid background */
+  background-color: white; 
   z-index: 1000;
   border-radius: 4px;
   transition: opacity 0.3s ease-in-out; /* Smooth transition for dropdown appearance */
