--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -14,34 +14,32 @@
             <!-- First Column for Links -->
             <div class="flex flex-col">
                 <nav>
-                    <a href="/meet-aj-hackett.html" class="footer-link">AJ Hackett</a>
+                    <a href="/meet-the-team.html" class="footer-link">Our Team</a>
                     <div class="submenu">
                         <a href="/meet-aj-hackett.html" class="footer-link">Meet AJ Hackett</a>
                         <a href="timeline.html" class="footer-link">Timeline</a>
+                        <a href="/purpose-promise-values.html" class="footer-link">Our Purpose, Promise, and Values</a>
                     </div>
                     <a href="/skypark-aj-hackett.html" class="footer-link">Our Brands</a>
                     <div class="submenu">
                         <a href="/skypark-aj-hackett.html" class="footer-link">Skypark by AJ Hackett</a>
                         <a href="/pondok-santi-estate.html" class="footer-link">Pondok Santi Estate</a>
+                        <a href="/experiences-aj-hackett.html" class="footer-link">Our Experiences</a>
                     </div>
-                    <a href="/experiences-aj-hackett.html" class="footer-link">Experiences</a>
-                    <a href="/projects.html" class="footer-link">Projects</a>
-                    <a href="/sustainability.html" class="footer-link">Sustainability</a>
                 </nav>
             </div>
 
             <!-- Second Column for Links -->
             <div class="flex flex-col">
                 <nav>
-                    <a href="/accessibility.html" class="footer-link">Accessibility</a>
-                    <a href="/reconciliation.html" class="footer-link">Reconciliation</a>
-                    <a href="/community.html" class="footer-link">Community</a>
-                    <a href="/meet-the-team.html" class="footer-link">Get to Know Us</a>
+                    <a href="/projects.html" class="footer-link">Projects</a>
+                    <a href="/sustainability.html" class="footer-link">Sustainability</a>
                     <div class="submenu">
-                        <a href="/meet-the-team.html" class="footer-link">Meet Our Team</a>
-                        <a href="/purpose-promise-values.html" class="footer-link">Our Purpose, Promise, and Values</a>
+                        <a href="/accessibility.html" class="footer-link">Accessibility</a>
+                        <a href="/reconciliation.html" class="footer-link">Reconciliation</a>
+                        <a href="/community.html" class="footer-link">Community</a>
                     </div>
-                    <a href="/safety-management.html" class="footer-link">Safety Management</a>
+                    <a href="/safety-management.html" class="footer-link">Safety</a>
                 </nav>
             </div>
         </div>
