--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,15 +1,12 @@
 <footer class="max-w-screen-2xl mx-auto">
     <div class="bg-dark-blue pt-15p sm:pt-5p sm:px-5p">
-        <div class="sm:grid sm:grid-cols-3 gap-6 pl-10p sm:pl-0">
+        <div class="sm:grid sm:grid-cols-4 gap-6 pl-10p sm:pl-0">
             <!-- Column for the Logo -->
             <div class="footer-logo mb-4 md:mb-0 flex flex-col items-start"> <!-- Adjusted flex alignment -->
                 <a href="/index.html" aria-label="Go to homepage" class="mb-2">
                   <img src="/images/logo-white-aj-hackett-international.png" alt="Logo of AJ Hackett International" class="w-48">
                 </a>
-                <a href="/contact.html" class="text-white footer-contact pt-5p">
-                  Contact Us
-                </a>
-              </div>
+            </div>
 
             <!-- First Column for Links -->
             <div class="flex flex-col">
@@ -20,19 +17,25 @@
                         <a href="timeline.html" class="footer-link">Timeline</a>
                         <a href="/purpose-promise-values.html" class="footer-link">Our Purpose, Promise, and Values</a>
                     </div>
-                    <a href="/skypark-aj-hackett.html" class="footer-link">Our Brands</a>
-                    <div class="submenu">
-                        <a href="/skypark-aj-hackett.html" class="footer-link">Skypark by AJ Hackett</a>
-                        <a href="/pondok-santi-estate.html" class="footer-link">Pondok Santi Estate</a>
-                        <a href="/experiences-aj-hackett.html" class="footer-link">Our Experiences</a>
-                    </div>
                 </nav>
             </div>
 
             <!-- Second Column for Links -->
             <div class="flex flex-col">
                 <nav>
+                    <a href="/skypark-aj-hackett.html" class="footer-link">Our Brands</a>
+                    <div class="submenu">
+                        <a href="/skypark-aj-hackett.html" class="footer-link">Skypark by AJ Hackett</a>
+                        <a href="/pondok-santi-estate.html" class="footer-link">Pondok Santi Estate</a>
+                        <a href="/experiences-aj-hackett.html" class="footer-link">Our Experiences</a>
+                    </div>
                     <a href="/projects.html" class="footer-link">Projects</a>
+                </nav>
+            </div>
+
+            <!-- Third Column for Links -->
+            <div class="flex flex-col">
+                <nav>
                     <a href="/sustainability.html" class="footer-link">Sustainability</a>
                     <div class="submenu">
                         <a href="/accessibility.html" class="footer-link">Accessibility</a>
@@ -40,12 +43,13 @@
                         <a href="/community.html" class="footer-link">Community</a>
                     </div>
                     <a href="/safety-management.html" class="footer-link">Safety</a>
+                    <a href="/contact.html" class="footer-link">Contact Us</a>
                 </nav>
             </div>
         </div>
 
         <!-- Centered Text for Copyright and Links -->
-        <div class="mt-4 text-center text-gray-300 pt-5p pb-5p">
+        <div class="mt-4 text-center text-gray-300 pt-2p pb-2p">
             <p>&copy; 2024 AJ Hackett International. All rights reserved.</p>
             <a href="https://refinedislandcreations.com/" class="pt-5p" target="_blank" rel="noopener noreferrer" aria-label="Link to Refined Island Creations website design and development">Designed and built by <span class="underline">Refined Island Creations</span>.</a>
         </div>
