--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -679,6 +679,9 @@ a {
 .gap-1 {
   gap: 0.25rem;
 }
+.gap-16 {
+  gap: 4rem;
+}
 .gap-2 {
   gap: 0.5rem;
 }
@@ -891,6 +894,9 @@ a {
 }
 .font-medium {
   font-weight: 500;
+}
+.font-semibold {
+  font-weight: 600;
 }
 .uppercase {
   text-transform: uppercase;
