--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -556,9 +556,6 @@ a {
 .ml-1 {
   margin-left: 0.25rem;
 }
-.ml-4 {
-  margin-left: 1rem;
-}
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -579,6 +576,9 @@ a {
 }
 .block {
   display: block;
+}
+.inline-block {
+  display: inline-block;
 }
 .flex {
   display: flex;
@@ -633,6 +633,13 @@ a {
 }
 .max-w-screen-2xl {
   max-width: 1536px;
+}
+.max-w-max {
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 .grow {
   flex-grow: 1;
@@ -693,9 +700,6 @@ a {
 }
 .gap-6 {
   gap: 1.5rem;
-}
-.gap-8 {
-  gap: 2rem;
 }
 .gap-y-5 {
   row-gap: 1.25rem;
@@ -1223,16 +1227,18 @@ header {
   color: #FFFDFF; /* Light text color */
   padding-left: 2rem;
   padding-top: 2rem;
+  padding-bottom: 2rem;
   top: 0;
   right: -500px; /* Initially hidden off-screen */
   width: 300px; /* Width of the menu */
-  height: 100vh;
+  max-height: 100vh; /* Allow the menu to grow but not exceed viewport height */
   text-align: left;
-  overflow-y: auto;
+  overflow-y: auto; /* Scroll if content exceeds max-height */
   z-index: 50;
   transition: right 0.7s ease-in-out; /* Slide effect */
   border-left: 4px solid #D2AE39; /* Yellow left border */
 }
+
 
 .mobile-menu.active {
   right: 0; 
@@ -1728,6 +1734,9 @@ footer {
   .sm\:mb-0 {
     margin-bottom: 0px;
   }
+  .sm\:mb-5p {
+    margin-bottom: 5%;
+  }
   .sm\:mt-0 {
     margin-top: 0px;
   }
@@ -1770,6 +1779,9 @@ footer {
   .sm\:grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
+  .sm\:gap-5 {
+    gap: 1.25rem;
+  }
   .sm\:rounded-3xl {
     border-radius: 1.5rem;
   }
@@ -1801,6 +1813,9 @@ footer {
   }
   .sm\:pr-5p {
     padding-right: 5%;
+  }
+  .sm\:pt-0 {
+    padding-top: 0px;
   }
   .sm\:pt-10p {
     padding-top: 10%;
@@ -1835,14 +1850,32 @@ footer {
   .md\:mb-0 {
     margin-bottom: 0px;
   }
+  .md\:ml-4 {
+    margin-left: 1rem;
+  }
   .md\:mt-0 {
     margin-top: 0px;
   }
   .md\:mt-5p {
     margin-top: 5%;
   }
+  .md\:min-h-50 {
+    min-height: 50vh;
+  }
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .md\:flex-row {
+    flex-direction: row;
+  }
+  .md\:items-center {
+    align-items: center;
+  }
+  .md\:justify-between {
+    justify-content: space-between;
+  }
+  .md\:gap-8 {
+    gap: 2rem;
   }
   .md\:pb-2p {
     padding-bottom: 2%;
@@ -1850,6 +1883,10 @@ footer {
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.2;
   }
 }
 
@@ -1872,9 +1909,6 @@ footer {
   }
   .lg\:pt-0 {
     padding-top: 0px;
-  }
-  .lg\:pt-2p {
-    padding-top: 2%;
   }
   .lg\:pt-5p {
     padding-top: 5%;
