--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -631,12 +631,12 @@ a {
 .min-w-\[288px\] {
   min-width: 288px;
 }
-.max-w-screen-2xl {
-  max-width: 1536px;
-}
 .max-w-max {
   max-width: -moz-max-content;
   max-width: max-content;
+}
+.max-w-screen-2xl {
+  max-width: 1536px;
 }
 .flex-shrink-0 {
   flex-shrink: 0;
@@ -703,11 +703,6 @@ a {
 }
 .gap-y-5 {
   row-gap: 1.25rem;
-}
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -1782,6 +1777,11 @@ footer {
   .sm\:gap-5 {
     gap: 1.25rem;
   }
+  .sm\:space-y-2 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+  }
   .sm\:rounded-3xl {
     border-radius: 1.5rem;
   }
@@ -1817,8 +1817,8 @@ footer {
   .sm\:pt-0 {
     padding-top: 0px;
   }
-  .sm\:pt-10p {
-    padding-top: 10%;
+  .sm\:pt-2p {
+    padding-top: 2%;
   }
   .sm\:pt-5p {
     padding-top: 5%;
@@ -1876,9 +1876,6 @@ footer {
   }
   .md\:gap-8 {
     gap: 2rem;
-  }
-  .md\:pb-2p {
-    padding-bottom: 2%;
   }
   .md\:text-5xl {
     font-size: 3rem;
